--- a/projet_1.css
+++ b/projet_1.css
@@ -4,6 +4,18 @@ body {
 	font-family: 'Roboto';
 }
 
+#link_services {
+	height: 100px;
+}
+
+#link_portfolio {
+	height: 40px;
+}
+
+#link_map {
+	height: 40px;
+}
+
 header {
 	display: flex;
 	flex-direction: row;
@@ -596,7 +608,9 @@ input, textarea {
 	#form {
 		bottom: 539px;
 		background-color: #ffffff;
-		margin-left: 0;
+		margin: 0 8%;
+		height: 443px;
+		width: 251px;
 	}
 
 	input, textarea {
@@ -677,6 +691,9 @@ input, textarea {
 	   	margin-left: 10px;
 		margin-top: 230px;
 		text-align: center;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 	}
 
 	.development {
