--- a/projet_1.css
+++ b/projet_1.css
@@ -4,17 +4,14 @@ body {
 	font-family: 'Roboto';
 }
 
-#link_services {
-	height: 100px;
-}
 
-#link_portfolio {
-	height: 40px;
-}
 
-#link_map {
-	height: 40px;
-}
+
+
+
+
+
+
 
 header {
 	display: flex;
@@ -49,7 +46,6 @@ a {
 	color: #000000;
 	text-decoration: none;
 	font-weight: 900;
-
 }
 
 #bordertop {
@@ -101,7 +97,7 @@ h1 {
 	
 .button {
  	margin-top: 50px;
- }
+}
 
 #button_effect {
 	border: none;
@@ -125,6 +121,9 @@ h1 {
 
 /*Maquette 2*/
 
+#services h2 {
+	padding-top: 150px;
+}
 
 #services {
 	margin-bottom:100px;
@@ -204,6 +203,10 @@ h3 {
 
 /*Maquette 3*/
 
+
+#projects h2 {
+	padding-top: 150px;
+}
 
 #portfolio_nav {
 	text-align: center;	
@@ -358,6 +361,10 @@ h4 {
 /*Maquette 4*/
 
 #map {
+	padding-top: 36px;
+}
+
+#map {
 	height: 602px;
 	position: relative;
 }
@@ -383,7 +390,7 @@ h4 {
 	width: 100%;
 	height: 570px;
 	position: absolute;
-	bottom: 31px;
+	bottom: -67px;
 	z-index: 2;
 }
 
@@ -397,7 +404,7 @@ h4 {
 	height: 425px;
 	width: 280px;	
 	position: absolute;
-	bottom: 98px;
+	bottom: 5px;
 	margin-left: 60%;
 }
 
@@ -486,6 +493,8 @@ input, textarea {
 		margin: 0;
 	}
 
+	/* Maquette 1 */
+
 	#home {
 		background-image: none;
 		background-color: #edd0d0;
@@ -509,6 +518,8 @@ input, textarea {
 		margin-top: 180px;
 		text-align: center;
 	}
+
+	/*Maquette 2 */
 
 	#services {
 		height: 1000px;
@@ -549,9 +560,15 @@ input, textarea {
     	width: 65%;
     }
 
+    /*Maquette 3 */
+
  	#portfolio ul {
  		width: 100%;
  	}
+
+ 	#down_arrow_allworks {
+		left: 26px;
+	}
 
  	#portfolio_list  li {
  		padding: 16px 6px;
@@ -590,6 +607,8 @@ input, textarea {
  		left: 5px;
  	}
 
+ 	/*Maquette 4 */
+
 	#form {
 		bottom: 539px;
 		background-color: #ffffff;
@@ -620,11 +639,6 @@ input, textarea {
 		position: relative;
 		bottom: 1006px;	
 	}
-
-	#down_arrow_allworks {
-		left: 26px;
-	}
-
 }
 
 /*Format petite tablette*/
@@ -655,6 +669,8 @@ input, textarea {
 	padding: 8px;
 	}
 
+	/*Maquette 1 */
+
 	#home {
 		background-image: none;
 		background-color: #edd0d0;
@@ -681,6 +697,8 @@ input, textarea {
 		align-items: center;
 	}
 
+	/*Maquette 2 */
+
 	.development {
 		padding: 0 3%;
 	}
@@ -696,6 +714,8 @@ input, textarea {
 	#services_list {
 		margin-left: 3%;		
 	}
+
+	/*Maquette 3 */
 
 	.portfolio img {
  		width: 236px;
@@ -715,6 +735,8 @@ input, textarea {
  		bottom: 50px;
  	}
 
+ 	/*Maquette 4 */
+
  	#grey {
 		height: 522px;
 		width: 100%;
@@ -733,9 +755,14 @@ input, textarea {
 /*format moyenne tablette */
 
 @media screen and (min-width: 700px) and (max-width: 839px){
+	
+	/*Maquette 3 */
+
 	.portfolio {
 		margin: 5px;
 	}
+
+	/*Maquette 4 */
 
 	#form {
 		left: -17px;
@@ -772,6 +799,8 @@ input, textarea {
 		margin-left: 10%;
 	}
 
+	/*Maquette 1 */
+
 	#home {
 		background-image: url('webagency/images/bg1_cut.jpg');
 	}
@@ -782,6 +811,8 @@ input, textarea {
 		text-align: left;
 	}
 	
+	/*Maquette 2 */
+
 	.development {
 		padding: 0 3%;
 	}
@@ -798,6 +829,8 @@ input, textarea {
 	#services_list {
 		padding-left: 25px;
 	}
+
+	/*Maquette 3 */
 
 	.portfolio img {
  		width: 170px;
@@ -827,6 +860,8 @@ input, textarea {
  		left: 5px;
  		bottom: 19px;
  	}
+
+ 	/*Maquette 4 */
 
 	#form {
 		left: 8px;
